# tinyframe

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  comm.h  lock.h  noncopyable.h  rio.h  singleton.h  test.cpp
util/: CMakeLists.txt  comm.h  lock.h  make.sh  remake.sh  rio.cpp  singleton.h  strtools.h  test.cpp  timeutil.h  xml.h
